# Melodmixdroid

./: .gitmodules  hdtexture.patch
.github/workflows/: debug.yml  main.yaml
app/: CMakeLists.txt
app/src/main/cpp/: Configuration.h  HDTexture.cpp  HDTexture.h  MelonDSAndroidConfiguration.cpp  MelonInstance.h  PlatformAndroid.cpp
app/src/main/cpp/retroachievements/: RetroAchievementsManager.cpp
app/src/main/java/me/magnum/melonds/common/opengl/: ExternalShaderLoader.kt  ShaderFactory.kt  VideoFilterShaderProvider.kt
app/src/main/java/me/magnum/melonds/common/retroachievements/: AndroidRAUserAuthStore.kt
app/src/main/java/me/magnum/melonds/domain/model/: EmulatorConfiguration.kt  RendererConfiguration.kt  TextureSettings.kt  VideoRenderer.kt
app/src/main/java/me/magnum/melonds/domain/repositories/: SettingsRepository.kt
app/src/main/java/me/magnum/melonds/impl/: AndroidRetroAchievementsRepository.kt  DataFolderManager.kt  FileSystemRomsRepository.kt  SharedPreferencesSettingsRepository.kt
app/src/main/java/me/magnum/melonds/impl/emulator/: SramProvider.kt
app/src/main/java/me/magnum/melonds/ui/common/achievements/viewmodel/: RetroAchievementsViewModel.kt
app/src/main/java/me/magnum/melonds/ui/emulator/: DSRenderer.kt  EmulatorViewModel.kt
app/src/main/java/me/magnum/melonds/ui/emulator/component/: RetroAchievementsSubmissionHandler.kt
app/src/main/java/me/magnum/melonds/ui/emulator/model/: RAIntegrationEvent.kt  RuntimeRendererConfiguration.kt
app/src/main/java/me/magnum/melonds/ui/emulator/render/: ExternalLayoutRender.kt  ExternalScreenRender.kt
app/src/main/java/me/magnum/melonds/ui/emulator/ui/: AchievementList.kt
app/src/main/java/me/magnum/melonds/ui/emulator/ui/popup/: RAIntegrationEventPopupUi.kt
app/src/main/java/me/magnum/melonds/ui/romdetails/model/: RomRetroAchievementsUiState.kt
app/src/main/java/me/magnum/melonds/ui/romdetails/ui/: RomDetailsScreen.kt  RomRetroAchievementsUi.kt
app/src/main/java/me/magnum/melonds/ui/settings/fragments/: GeneralPreferencesFragment.kt  VideoPreferencesFragment.kt
app/src/main/java/me/magnum/melonds/ui/settings/viewmodel/: RetroAchievementsSettingsViewModel.kt
app/src/main/res/values/: arrays.xml  strings.xml
app/src/main/res/values-b+id/: strings.xml
app/src/main/res/values-b+it/: strings.xml
app/src/main/res/values-b+ru/: strings.xml
app/src/main/res/values-b+zh+Hans/: strings.xml
app/src/main/res/xml/: pref_general.xml  pref_save_files.xml  pref_video.xml
buildSrc/src/main/kotlin/: AppConfig.kt
rcheevos-api/src/main/java/me/magnum/rcheevosapi/: RAApi.kt
